# onedl-mmengine

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  README.md  README_zh-CN.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature_request.yml  3-documentation.yml  config.yml
.github/scripts/: verify-package-contents.py
.github/workflows/: ci.yml  docs.yml  lint.yml  merge_stage_test.yml  pr_stage_test.yml  publish-to-pypi.yml
docs/en/: conf.py  index.rst
docs/en/_static/css/: readthedocs.css
docs/en/advanced_tutorials/: basedataset.md  config.md  cross_library.md  data_transform.md  initialize.md  model_analysis.md  registry.md
docs/en/common_usage/: debug_tricks.md  epoch_to_iter.md  save_gpu_memory.md  set_interval.md
docs/en/design/: evaluation.md  infer.md  logging.md  visualization.md
docs/en/examples/: train_a_gan.md
docs/en/get_started/: installation.md
docs/en/migration/: param_scheduler.md
docs/en/notes/: changelog.md  contributing.md
docs/en/tutorials/: dataset.md  evaluation.md  hook.md  param_scheduler.md  runner.md
docs/zh_cn/: conf.py
examples/: test_time_augmentation.py
mmengine/config/: config.py  lazy.py
mmengine/dataset/: sampler.py
mmengine/fileio/: file_client.py
mmengine/fileio/backends/: local_backend.py
mmengine/hooks/: __init__.py  optuna_prune_hook.py
mmengine/model/base_model/: data_preprocessor.py
mmengine/optim/optimizer/: amp_optimizer_wrapper.py  base.py  optimizer_wrapper.py
mmengine/runner/: _flexible_runner.py  amp.py  checkpoint.py  loops.py  runner.py
mmengine/structures/: instance_data.py
mmengine/testing/: compare.py
mmengine/utils/: package_utils.py
mmengine/utils/dl_utils/: collect_env.py
tests/data/config/lazy_module_config/: pure_python_style_toy_config.py
tests/data/config/py_config/: test_code_in_config.py
tests/test_config/: test_lazy.py
tests/test_dataset/: test_sampler.py
tests/test_dist/: test_dist.py
tests/test_fileio/: test_fileclient.py  test_io.py
tests/test_fileio/test_backends/: test_http_backend.py  test_local_backend.py  test_petrel_backend.py
tests/test_hooks/: test_empty_cache_hook.py  test_optuna_prune_hook.py
tests/test_hub/: test_hub.py
tests/test_infer/: test_infer.py
tests/test_model/test_base_model/: test_data_preprocessor.py
tests/test_optim/test_optimizer/: test_optimizer_wrapper.py
tests/test_registry/: test_build_functions.py  test_registry.py
tests/test_runner/: test_amp.py  test_runner.py
tests/test_strategies/: test_fsdp.py
tests/test_testing/: test_compare.py
tests/test_utils/: test_package_utils.py
tests/test_visualizer/: test_vis_backend.py
