[project]
name = "onedl-mmengine"
version = "0.10.11"
description = "Engine of VBTI projects"
readme = "README.md"
authors = [
    { name = "VBTI Contributors", email = "oss-team@vbti.nl" },
    { name = "OneDL MMEngine Contributors" }
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities"
]
dependencies = [
    "addict",
    "matplotlib",
    "numpy",
    "packaging",
    "pyyaml",
    "rich",
    "termcolor",
    "yapf",
    "regex; sys_platform == 'win32'"
]

[dependency-groups]
test = [
    "aim>=3.18,<4; python_version < '3.13' and sys_platform != 'win32'",
    "bitsandbytes",
    "clearml",
    "coverage",
    "dadaptation",
    "dvclive",
    "lion-pytorch",
    "lmdb",
    "mlflow",
    "opencv-python",
    "parameterized",
    "pydantic>=1.10.20,<2",
    "pytest<9",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "transformers"
]
test-lite = [
    "lmdb",
    "opencv-python",
    "parameterized",
    "pytest<9",
]
docs = [
    "docutils",
    "deepspeed",
    "myst-parser",
    "opencv-python",
    "pytorch_sphinx_theme @ git+https://github.com/VBTI-development/onedl_sphinx_theme.git@master",
    "sphinx",
    "sphinx-copybutton",
    "sphinx-tabs",
    "sphinx_markdown_tables>=0.0.16",
    "sphinxcontrib-jquery",
    "tabulate",
    "torch",
    "torchvision",
    "urllib3"
]
lint = [
    "interrogate",
    "pre-commit",
]

[project.optional-dependencies]
all = [
    "addict",
    "matplotlib",
    "numpy",
    "packaging",
    "pyyaml",
    "rich",
    "termcolor",
    "yapf",
    "regex; sys_platform == 'win32'",
    "aim>=3.18,<4; python_version < '3.13' and sys_platform != 'win32'",
    "bitsandbytes",
    "clearml",
    "coverage",
    "dadaptation",
    "dvclive",
    "lion-pytorch",
    "lmdb",
    "mlflow",
    "parameterized",
    "pydantic>=1.10.20,<2",
    "pytest<9",
    "transformers",
    "deepspeed",
]

[project.urls]
Homepage = "https://onedl.ai"
Repository = "https://github.com/VBTI-development/onedl-mmengine"
Documentation = "https://onedl-mmengine.readthedocs.io/en/latest/"


[tool.hatch.build.targets.wheel]
packages = ["mmengine"]

[tool.hatch.build.targets.wheel.force-include]
"mmengine/hub/openmmlab.json" = "mmengine/hub/openmmlab.json"
"mmengine/hub/deprecated.json" = "mmengine/hub/deprecated.json"
"mmengine/hub/mmcls.json" = "mmengine/hub/mmcls.json"
"mmengine/hub/torchvision_0.12.json" = "mmengine/hub/torchvision_0.12.json"

[tool.hatch.build.targets.sdist]
include = [
    "/CITATION.cff",
    "/LICENSE",
    "/README.md",
    "/docs",
    "/examples",
    "/mmengine",
    "/tests",
    "/pyproject.toml",
]

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.isort]
line_length = 79
multi_line_output = 0
extra_standard_library = ["setuptools"]
known_first_party = ["mmengine"]
known_third_party = ["pytest", "yaml"]
no_lines_before = ["STDLIB", "LOCALFOLDER"]
default_section = "THIRDPARTY"

[tool.yapf]
based_on_style = "pep8"
blank_line_before_nested_class_or_def = true
split_before_expression_after_opening_paren = true

[tool.codespell]
ignore-words-list = "nd, ba, warmup"

[tool.uv]
default-groups = []

[tool.uv.dependency-groups]
test = { requires-python = ">=3.10" }
test-lite = { requires-python = ">=3.10" }
docs = { requires-python = ">=3.10" }
lint = { requires-python = ">=3.10" }

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.pytest.ini_options]
norecursedirs = "tests/data"
testpaths = "tests"
